@startuml

title __MODEL's Class Diagram__\n

  namespace cn.shui.learning_plan.beike.model {
    class cn.shui.learning_plan.beike.model.ListNode {
        + val : int
        + ListNode()
        + ListNode()
        + ListNode()
    }
  }
  

  namespace cn.shui.learning_plan.beike.model {
    class cn.shui.learning_plan.beike.model.TreeNode {
        + val : int
        + TreeNode()
        + TreeNode()
        + TreeNode()
    }
  }
  

  cn.shui.learning_plan.beike.model.ListNode o-- cn.shui.learning_plan.beike.model.ListNode : next
  cn.shui.learning_plan.beike.model.TreeNode o-- cn.shui.learning_plan.beike.model.TreeNode : left
  cn.shui.learning_plan.beike.model.TreeNode o-- cn.shui.learning_plan.beike.model.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
